--- a/control/Cargo.toml
+++ b/control/Cargo.toml
@@ -12,14 +12,4 @@ egui_extras = "0.24"
 egui_tiles = "0.4"
 rfd = "0.12"
 
-windows = { version = "0.52", features = [
-    "Wdk_System_Threading",
-    "Win32_Foundation",
-    "Win32_System_Diagnostics_Debug",
-    "Win32_System_ProcessStatus",
-    "Win32_System_SystemInformation",
-    "Win32_System_SystemServices",
-    "Win32_System_Threading",
-] }
-unicorn-engine = "2.0"
-iced-x86 = { version = "1.20", default-features = false, features = ["std", "decoder"] }
+serpent_control_backend = { path = "../control_backend" }
