Fix compilation, working on payload

--- a/control/Cargo.toml
+++ b/control/Cargo.toml
@@ -12,4 +12,10 @@ egui_extras = "0.24"
 egui_tiles = "0.4"
 rfd = "0.12"
 
+windows = { version = "0.52", features = [
+    "Wdk_System_Threading",
+    "Win32_Foundation",
+    "Win32_System_ProcessStatus",
+    "Win32_System_Threading",
+] }
 serpent_control_backend = { path = "../control_backend" }
